Добавляет ручки управления главами видео
